--- a/1.tex
+++ b/1.tex
@@ -158,26 +158,84 @@
 
 \begin{Shaded}
 \begin{Highlighting}[]
+\NormalTok{ts.douglasia <-}\StringTok{ }\NormalTok{conjunto}\OperatorTok{$}\NormalTok{Especie }\OperatorTok{==}\StringTok{ "H"}\OperatorTok{|}\StringTok{ }\NormalTok{conjunto}\OperatorTok{$}\NormalTok{Especie }\OperatorTok{==}\StringTok{"F"}
+
 \CommentTok{# altura  -----------------------------------------------------------------}
 
 
 \NormalTok{H.media <-}\KeywordTok{subset}\NormalTok{(conjunto, conjunto}\OperatorTok{$}\NormalTok{Altura }\OperatorTok{<=}\StringTok{ }\FloatTok{13.9432}\NormalTok{)}
 
+\KeywordTok{mean}\NormalTok{(H.media}\OperatorTok{$}\NormalTok{Altura)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] 11.53125
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
 \NormalTok{H}\FloatTok{.16}\NormalTok{ <-}\StringTok{ }\KeywordTok{subset}\NormalTok{(conjunto,conjunto}\OperatorTok{$}\NormalTok{Altura }\OperatorTok{<}\StringTok{ }\FloatTok{16.5}\NormalTok{)}
 
+\KeywordTok{mean}\NormalTok{(H}\FloatTok{.16}\OperatorTok{$}\NormalTok{Altura)}
+\end{Highlighting}
+\end{Shaded}
 
+\begin{verbatim}
+## [1] 12.85538
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
 \CommentTok{# Vecinos -----------------------------------------------------------------}
 
 \NormalTok{vecinos_}\DecValTok{3}\NormalTok{ <-}\StringTok{ }\KeywordTok{subset}\NormalTok{(conjunto,conjunto}\OperatorTok{$}\NormalTok{Vecinos }\OperatorTok{<=}\StringTok{ }\DecValTok{3}\NormalTok{) }
 \NormalTok{vecinos_}\DecValTok{4}\NormalTok{ <-}\StringTok{ }\KeywordTok{subset}\NormalTok{(conjunto,conjunto}\OperatorTok{$}\NormalTok{Vecinos }\OperatorTok{>}\StringTok{ }\DecValTok{4}\NormalTok{)}
+\KeywordTok{mean}\NormalTok{(vecinos_}\DecValTok{3}\OperatorTok{$}\NormalTok{Vecinos)}
+\end{Highlighting}
+\end{Shaded}
 
+\begin{verbatim}
+## [1] 2.115385
+\end{verbatim}
 
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{mean}\NormalTok{(vecinos_}\DecValTok{4}\OperatorTok{$}\NormalTok{Vecinos)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] 5.454545
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
 \CommentTok{# Diámetro ----------------------------------------------------------------}
 
 \NormalTok{DBH_media <-}\StringTok{ }\KeywordTok{subset}\NormalTok{(conjunto, conjunto}\OperatorTok{$}\NormalTok{Diametro }\OperatorTok{<}\StringTok{ }\FloatTok{15.794}\NormalTok{)}
 \NormalTok{DBH_}\DecValTok{16}\NormalTok{ <-}\StringTok{ }\KeywordTok{subset}\NormalTok{(conjunto, conjunto}\OperatorTok{$}\NormalTok{Diametro }\OperatorTok{>}\StringTok{ }\DecValTok{16}\NormalTok{)}
 
+\KeywordTok{mean}\NormalTok{(DBH_}\DecValTok{16}\OperatorTok{$}\NormalTok{Diametro)}
+\end{Highlighting}
+\end{Shaded}
 
+\begin{verbatim}
+## [1] 18.4375
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{mean}\NormalTok{(DBH_media}\OperatorTok{$}\NormalTok{Diametro)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] 13.256
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
 \CommentTok{# Especie -----------------------------------------------------------------}
 
 \NormalTok{Cedro_rojo <-}\StringTok{ }\KeywordTok{subset}\NormalTok{(conjunto, conjunto}\OperatorTok{$}\NormalTok{Especie }\OperatorTok{==}\StringTok{ "C"}\NormalTok{)}
@@ -185,18 +243,20 @@
 \NormalTok{Alturacedrorojo <-}\StringTok{ }\KeywordTok{subset}\NormalTok{(Cedro_rojo, Cedro_rojo}\OperatorTok{$}\NormalTok{Altura }\OperatorTok{>}\StringTok{ }\FloatTok{18.5}\NormalTok{)}
 
 \NormalTok{Tsuga <-}\StringTok{ }\KeywordTok{subset}\NormalTok{(conjunto, conjunto}\OperatorTok{$}\NormalTok{Especie }\OperatorTok{==}\StringTok{ "H"}\NormalTok{)}
-\NormalTok{Diametrotsuga <-}\StringTok{ }\KeywordTok{subset}\NormalTok{(Tsuga, Tsuga}\OperatorTok{$}\NormalTok{Diametro }\OperatorTok{<=}\StringTok{ }\FloatTok{16.9}\NormalTok{)}
-\NormalTok{Alturatsuga <-}\StringTok{ }\KeywordTok{subset}\NormalTok{(Tsuga, Tsuga}\OperatorTok{$}\NormalTok{Altura }\OperatorTok{>}\StringTok{ }\FloatTok{18.5}\NormalTok{)}
-
 \NormalTok{Douglasia <-}\StringTok{ }\KeywordTok{subset}\NormalTok{(conjunto, conjunto}\OperatorTok{$}\NormalTok{Especie }\OperatorTok{==}\StringTok{ "F"}\NormalTok{)}
-\NormalTok{Diametrodou <-}\StringTok{ }\KeywordTok{subset}\NormalTok{(Douglasia, Douglasia}\OperatorTok{$}\NormalTok{Diametro }\OperatorTok{<=}\StringTok{ }\FloatTok{16.9}\NormalTok{)}
-\NormalTok{Alturadou <-}\StringTok{ }\KeywordTok{subset}\NormalTok{(Douglasia, Douglasia}\OperatorTok{$}\NormalTok{Altura }\OperatorTok{>=}\StringTok{ }\FloatTok{18.5}\NormalTok{)}
-
-
+\NormalTok{ts.douglasia <-}\StringTok{ }\KeywordTok{subset}\NormalTok{(conjunto, conjunto}\OperatorTok{$}\NormalTok{Especie }\OperatorTok{==}\StringTok{ "H"}\OperatorTok{|}\StringTok{ }\NormalTok{conjunto}\OperatorTok{$}\NormalTok{Especie }\OperatorTok{==}\StringTok{"F"}\NormalTok{)}
 
 \CommentTok{# Histogramas -------------------------------------------------------------}
 
-\KeywordTok{hist}\NormalTok{(conjunto}\OperatorTok{$}\NormalTok{Altura, }\DataTypeTok{col=}\StringTok{"yellow"}\NormalTok{,}\DataTypeTok{xlab =}\StringTok{"Altura"}\NormalTok{, }\DataTypeTok{ylab =} \StringTok{"frecuencia"}\NormalTok{, }\DataTypeTok{main =}\StringTok{"Histograma de altura"}\NormalTok{)}
+\KeywordTok{par}\NormalTok{(}\DataTypeTok{mfrow=}\KeywordTok{c}\NormalTok{(}\DecValTok{2}\NormalTok{,}\DecValTok{2}\NormalTok{))}
+\KeywordTok{hist}\NormalTok{(Tsuga}\OperatorTok{$}\NormalTok{Altura, }\DataTypeTok{main =} \StringTok{"Altura especie H"}\NormalTok{, }
+     \DataTypeTok{col=}\StringTok{"red"}\NormalTok{, }\DataTypeTok{xlab=}\StringTok{"Alturas"}\NormalTok{, }\DataTypeTok{ylab=}\StringTok{"Frecuencia"}\NormalTok{)}
+\KeywordTok{hist}\NormalTok{(Douglasia}\OperatorTok{$}\NormalTok{Altura, }\DataTypeTok{main=} \StringTok{"Altura especie F"}\NormalTok{,}
+     \DataTypeTok{col=}\StringTok{"blue"}\NormalTok{, }\DataTypeTok{xlab=}\StringTok{"Alturas"}\NormalTok{, }\DataTypeTok{ylab=}\StringTok{"Frecuencia"}\NormalTok{)}
+\KeywordTok{hist}\NormalTok{(Tsuga}\OperatorTok{$}\NormalTok{Diametro , }\DataTypeTok{main =} \StringTok{"Diametro especie H"}\NormalTok{,}
+     \DataTypeTok{col=}\StringTok{"yellow"}\NormalTok{, }\DataTypeTok{xlab=}\StringTok{"Altura"}\NormalTok{, }\DataTypeTok{ylab=}\StringTok{"Frecuencia"}\NormalTok{)}
+\KeywordTok{hist}\NormalTok{(Douglasia}\OperatorTok{$}\NormalTok{Diametro, }\DataTypeTok{main=} \StringTok{"Diametro especie F"}\NormalTok{,}
+     \DataTypeTok{col=}\StringTok{"pink"}\NormalTok{, }\DataTypeTok{xlab=}\StringTok{"Altura"}\NormalTok{, }\DataTypeTok{ylab=}\StringTok{"Frecuencia"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
@@ -204,22 +264,10 @@
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\KeywordTok{hist}\NormalTok{(conjunto}\OperatorTok{$}\NormalTok{Diametro, }\DataTypeTok{col=}\StringTok{"red"}\NormalTok{,}\DataTypeTok{xlab =}\StringTok{"Diametro"}\NormalTok{, }\DataTypeTok{ylab =} \StringTok{"frecuencia"}\NormalTok{, }\DataTypeTok{main =}\StringTok{"Histograma de Diametro"}\NormalTok{)}
-\end{Highlighting}
-\end{Shaded}
+\KeywordTok{par}\NormalTok{(}\DataTypeTok{mfrow=}\KeywordTok{c}\NormalTok{(}\DecValTok{1}\NormalTok{,}\DecValTok{1}\NormalTok{))}
 
-\includegraphics{1_files/figure-latex/unnamed-chunk-1-2.pdf}
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\KeywordTok{hist}\NormalTok{(conjunto}\OperatorTok{$}\NormalTok{Vecinos, }\DataTypeTok{col=}\StringTok{"orange"}\NormalTok{,}\DataTypeTok{xlab =}\StringTok{"Vecinos"}\NormalTok{, }\DataTypeTok{ylab =} \StringTok{"frecuencia"}\NormalTok{, }\DataTypeTok{main =}\StringTok{"Histograma de Vecinos"}\NormalTok{)}
-\end{Highlighting}
-\end{Shaded}
 
-\includegraphics{1_files/figure-latex/unnamed-chunk-1-3.pdf}
-
-\begin{Shaded}
-\begin{Highlighting}[]
 \CommentTok{# desviaciones estandar ---------------------------------------------------}
 
 \KeywordTok{sd}\NormalTok{(conjunto}\OperatorTok{$}\NormalTok{Altura)}
@@ -228,6 +276,46 @@
 
 \begin{verbatim}
 ## [1] 2.907177
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{sd}\NormalTok{(H.media}\OperatorTok{$}\NormalTok{Altura)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] 1.74653
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{sd}\NormalTok{(H}\FloatTok{.16}\OperatorTok{$}\NormalTok{Altura)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] 2.210549
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{sd}\NormalTok{(DBH_}\DecValTok{16}\OperatorTok{$}\NormalTok{Diametro)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] 1.815588
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{sd}\NormalTok{(DBH_media}\OperatorTok{$}\NormalTok{Diametro)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] 2.098627
 \end{verbatim}
 
 \begin{Shaded}
@@ -248,6 +336,26 @@
 
 \begin{verbatim}
 ## [1] 1.598596
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{sd}\NormalTok{(vecinos_}\DecValTok{3}\OperatorTok{$}\NormalTok{Vecinos)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] 1.070586
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{sd}\NormalTok{(vecinos_}\DecValTok{4}\OperatorTok{$}\NormalTok{Vecinos)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] 0.522233
 \end{verbatim}
 
 \end{document}
